--- a/printer.cfg
+++ b/printer.cfg
@@ -2,29 +2,29 @@
 #   Printer Configuration
 #####################################################################
 
-[include config/mcu.cfg]
+[include config_mcu.cfg]
 
-[include config/adxl.cfg]
+[include config_adxl.cfg]
 
-[include config/kinematics.cfg]
+[include config_kinematics.cfg]
 
-[include config/steppers.cfg]
+[include config_steppers.cfg]
 
-[include config/extruder.cfg]
+[include config_extruder.cfg]
 
-[include config/bed.cfg]
+[include config_bed.cfg]
 
-[include config/fans.cfg]
+[include config_fans.cfg]
 
-[include config/leds.cfg]
+[include config_leds.cfg]
 
-[include config/probe.cfg]
+[include config_probe.cfg]
 
-[include config/enclosure.cfg]
+[include config_enclosure.cfg]
 
-[include config/display.cfg]
+[include config_display.cfg]
 
-[include config/filament_sensor.cfg]
+[include config_filament_sensor.cfg]
 
 [force_move]
 enable_force_move: True
@@ -46,21 +46,21 @@ filename: ~/variables.cfg
 
 [include klipper/config/nozzle_scrub.cfg]      #RC Adicionado Purge bucket
 
-[include macros/g32.cfg]
+[include macro_g32.cfg]
  
-[include macros/purge_fil.cfg]
+[include macro_purge_fil.cfg]
 
-[include macros/print_start.cfg]
+[include macro_print_start.cfg]
 
-[include macros/print_end.cfg]
+[include macro_print_end.cfg]
 
-[include macros/wipe_nozzle.cfg]
+[include macro_wipe_nozzle.cfg]
 
-[include macros/level_bed_adv.cfg]
+[include macro_level_bed_adv.cfg]
 
-[include macros/filament_change.cfg]
+[include macro_filament_change.cfg]
 
-[include macros/beeper.cfg]
+[include macro_beeper.cfg]
     
 [gcode_macro ZUP]
 gcode:
