--- a/macro_print_start.cfg
+++ b/macro_print_start.cfg
@@ -1,19 +1,55 @@
 [gcode_macro PRINT_START]
 #   Use PRINT_START for the slicer starting script - please customise for your slicer of choice
+variable_callback : None
 gcode:
-    #G32                            ; home all axes
-    #G1 Z20 F3000                   ; move nozzle away from bed
-    # O do Diem:
     {% set speed_min = params.CORNER_VELOCITY|default(4)|float %}
-    {% set speed_max = params.MAX_VELOCITY|default(440)|float %}
+    {% set speed_max = params.MAX_VELOCITY|default(200)|float %}
     {% set speed_accel = params.ACCEL|default(500)|int %}
     {% set speed_deaccel = params.DEACCEL|default(500)|int %}
-    {% set force_home_xy = params.FORCE_HOME_XY|default(1)|int %}
+    {% set force_home_xy = params.FORCE_HOME_XY|default(0)|int %}
     {% set force_qgl = params.FORCE_QGL|default(0)|int %}
-    {% set force_calibrate_z = params.FORCE_CALIBRATE_Z|default(0)|int %}
     {% set force_bedmesh = params.FORCE_BEDMESH|default(0)|int %}
-    
     {% set PA = params.PA|default(0.05)|float %}
+    {% set HEATSOAK = params.HEATSOAK|default(100.0)|float %}
+    {% set CALLBACK = params.CALLBACK %}
+    
+    
+    SET_GCODE_VARIABLE MACRO=PRINT_START VARIABLE=callback VALUE="'{CALLBACK}'"
+    {% set CONTINUE -%}
+        PRINT_START_CONTINUE CORNER_VELOCITY={speed_min} MAX_VELOCITY={speed_max} ACCEL={speed_accel} DEACCEL={speed_deaccel} FORCE_HOME_XY={force_home_xy} FORCE_QGL={force_qgl} FORCE_BEDMESH={force_bedmesh} PA={PA} HEATSOAK={HEATSOAK}
+    {%- endset %}
+    
+    
+    {action_respond_info("Callback:" ~ CALLBACK)}
+    {action_respond_info("Continue:" ~ CONTINUE)}
+    
+    M117 Preparing to print
+    {action_respond_info("**************** Preparing to print ****************")}
+    
+    SET_VELOCITY_LIMIT VELOCITY={speed_max} ACCEL={speed_accel} ACCEL_TO_DECEL={speed_deaccel} SQUARE_CORNER_VELOCITY={speed_min}
+    CLEAR_PAUSE    ; Limpa o estado de pause caso a ultima impressao tenha sido finalizada depois de um pause e antes de um resume.
+    
+    SET_STATUS STATUS="heat_soak"
+    
+    {% if HEATSOAK > printer.heater_bed.temperature %}
+        HEAT_SOAK HEATER='heater_bed' TARGET={HEATSOAK} SOAKER='temperature_sensor enclosure_temp' RATE=0.75 TIMEOUT=60 CALLBACK='{CONTINUE}'
+    {% else %}
+        RESPOND TYPE=echo MSG="Skiping heatsoak."
+        PRINT_START_CONTINUE CORNER_VELOCITY={speed_min} MAX_VELOCITY={speed_max} ACCEL={speed_accel} DEACCEL={speed_deaccel} FORCE_HOME_XY={force_home_xy} FORCE_QGL={force_qgl} FORCE_BEDMESH={force_bedmesh} PA={PA} HEATSOAK={HEATSOAK}
+    {% endif %}
+    
+
+[gcode_macro PRINT_START_CONTINUE]
+gcode:
+    {% set speed_min = params.CORNER_VELOCITY|default(4)|float %}
+    {% set speed_max = params.MAX_VELOCITY|default(200)|float %}
+    {% set speed_accel = params.ACCEL|default(500)|int %}
+    {% set speed_deaccel = params.DEACCEL|default(500)|int %}
+    {% set force_home_xy = params.FORCE_HOME_XY|default(0)|int %}
+    {% set force_qgl = params.FORCE_QGL|default(0)|int %}
+    {% set force_bedmesh = params.FORCE_BEDMESH|default(0)|int %}
+    {% set PA = params.PA|default(0.05)|float %}
+    {% set HEATSOAK = params.HEATSOAK|default(100.0)|float %}
 
     {% set bkp_speed_accel = printer.toolhead.max_accel|int %}
     {% set bkp_speed_deaccel = printer.toolhead.max_accel_to_decel|int %}
@@ -22,18 +58,10 @@ gcode:
 
     {% if (force_qgl == 1 or force_home_xy == 1) %}{% set force_calibrate_z = 1 %}{% endif %}
     
-    M117 Print_Start MACRO
-    RESPOND TYPE=echo MSG="Starting to print..."
-    SET_VELOCITY_LIMIT VELOCITY={speed_max} ACCEL={speed_accel} ACCEL_TO_DECEL={speed_deaccel} SQUARE_CORNER_VELOCITY={speed_min}
-    CLEAR_PAUSE    ; Limpa o estado de pause caso a ultima impressao tenha sido finalizada depois de um pause e antes de um resume.
-
     {% if ("xyz" not in printer.toolhead.homed_axes) or (force_home_xy == 1) %}
-      SET_LED LED=case RED=1 GREEN=1 BLUE=0 WHITE=0
-      M117 Homming XYZ
-      RESPOND TYPE=echo MSG="Not hommed. Homming XYZ axes."
+      SET_STATUS STATUS="home"
       G28
-      G90
-      G0 Y250 Z5 F5000 ; Avoid  klicky
+      AVOID_KLICKY Z=5
     {% endif %}
     
 	{% if printer["gcode_macro _Probe_Variables"].probe_lock or printer["gcode_macro _Probe_Variables"].probe_attached %} ; doca o klicky caso o probe esteja ainda no hotend
@@ -41,36 +69,41 @@ gcode:
 	  DOCK_PROBE_UNLOCK
 	{% endif %}
 	
-    G90
-    M117 NOZZLE_WIPE
-    RESPOND TYPE=echo MSG="STEP 1: Nozzle wipe."
+    SET_STATUS STATUS="wipe"
     NOZZLE_WIPE
-    G0 Y250 F5000	; Avoid  klicky
+    AVOID_KLICKY
     ATTACH_PROBE_LOCK
     M106 S255  		; Start fan
     {% if (not printer.quad_gantry_level.applied) or force_qgl == 1 %}
-      M117 QUAD_GANTRY_LEVEL
-      RESPOND TYPE=echo MSG="STEP 2: Quad gantry level."
-      SET_LED LED=case RED=1 GREEN=0 BLUE=0 WHITE=0
+      SET_STATUS STATUS="qgl"
       QUAD_GANTRY_LEVEL
+      SET_STATUS STATUS="home"
       G28 Z
-      G0 Y250 F5000 	; Avoid  klicky
-      M117 CALIBRATE_Z
-      RESPOND TYPE=echo MSG="STEP 3: Calibrate Z offset."
-      ;CLEAN_NOZZLE
-      G0 Y250 F5000 	; Avoid  klicky
+      SET_STATUS STATUS="wipe"
+      AVOID_KLICKY X=95  
+      NOZZLE_WIPE
+      AVOID_KLICKY X=202
       M106 S0  		    ; Stop fan
+      SET_STATUS STATUS="zoffset"
       CALIBRATE_Z
       M106 S255  		; Start fan
     {% endif %}
-    LEVEL_BED_ADVANCED MAX_AGE=10 ; probe mesh eventually
+
+    SET_STATUS STATUS="bedlevel"
+    
+    {% if printer["gcode_macro VARIABLES"].hot_start == 0 or force_bedmesh == 1 %}
+        SET_GCODE_VARIABLE MACRO=VARIABLES VARIABLE=hot_start VALUE=1
+        LEVEL_BED_ADVANCED MAX_AGE=10 FORCE=1 ; Force probe mesh
+    {% else %}
+        LEVEL_BED_ADVANCED MAX_AGE=10 ; probe mesh eventualy
+    {% endif %}
+    
     RESPOND TYPE=echo MSG="Docking probe."
     DOCK_PROBE_UNLOCK
     M106 S0  		; Stop fan
     SET_VELOCITY_LIMIT VELOCITY={bkp_speed_max} ACCEL={bkp_speed_accel} ACCEL_TO_DECEL={bkp_speed_deaccel} SQUARE_CORNER_VELOCITY={bkp_speed_min}
     SAVE_GCODE_STATE NAME=printer_init
-    
-    #G0 X308 Y350 Z30 F3600 ; bucket
+
     SET_LED LED=case RED=0 GREEN=0 BLUE=0 WHITE=1
     SET_PRESSURE_ADVANCE ADVANCE={PA}
     RESTORE_GCODE_STATE NAME=printer_init
