--- a/printer.cfg
+++ b/printer.cfg
@@ -61,7 +61,18 @@ filename: ~/variables.cfg
 [include macro_filament_change.cfg]
 
 [include macro_beeper.cfg]
+
+[include macro_heatsoak.cfg]
+
+[include macro_avoid_klicky.cfg]
+
+[include macro_set_status.cfg]
     
+[gcode_macro VARIABLES]
+variable_hot_start: 0
+gcode:
+    M118 Stored variable as {printer["gcode_macro VARIABLES"].false}
+     
 [gcode_macro ZUP]
 gcode:
     SET_GCODE_OFFSET Z_ADJUST=0.01 MOVE=1
@@ -69,6 +80,22 @@ gcode:
 [gcode_macro ZDOWN]
 gcode:
     SET_GCODE_OFFSET Z_ADJUST=-0.01 MOVE=1
+    
+[gcode_macro _SET_FAN_SPEED]
+gcode:
+    M106 S{ (params.PERCENT | float) * 255 / 100 }
+
+[gcode_macro CENTER]
+gcode:
+    {% if ("xyz" not in printer.toolhead.homed_axes) %}
+      G28
+    {% endif %}
+    G90
+    G0 X{ printer.toolhead.axis_maximum.x/2 } Y{ printer.toolhead.axis_maximum.y/2 } Z{ printer.toolhead.axis_maximum.z/2 } F7200
+
+[gcode_macro HOMED]
+gcode:
+    { action_respond_info("Axes homed: " ~ printer.toolhead.homed_axes)}
 
 #*# <---------------------- SAVE_CONFIG ---------------------->
 #*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
