--- a/macro_filament_change.cfg
+++ b/macro_filament_change.cfg
@@ -32,6 +32,7 @@ gcode:
         PAUSE
         SET_IDLE_TIMEOUT TIMEOUT=3600
         RESPOND TYPE=command MSG=action:paused
+        SIREN
     {% endif %}
     G91
     G1 E-{E} F2700
