--- a/macro_heatsoak.cfg
+++ b/macro_heatsoak.cfg
@@ -16,6 +16,8 @@ variable_stage: None ## heating -> soaking -> done -> None
 variable_total_time_elapsed: 0
 variable_soak_time_remaining: 0
 variable_check_interval: 5.0
+variable_check_interval_heating: 5.0
+variable_check_interval_soaking: 30.0
 
 ## in seconds
 variable_heater_sensor: None
@@ -24,15 +26,17 @@ variable_timeout: 20
 variable_target_temp: 0
 variable_target_rate: 10
 variable_callback: None
+variable_mintemp: 45
 
 gcode:
     {% set HEATER  = (params.HEATER | string) %}
     {% set TARGET  = (params.TARGET | default(0) | float) %}
     {% set SOAKER  = (params.SOAKER | string) %}
-    {% set RATE    = (params.RATE | default(0.75) | float) %}  ## in degrees C per minute
-    {% set TIMEOUT = (params.TIMEOUT | default(20) | int) * 60 %} ## minutes to seconds
+    {% set RATE    = (params.RATE | default(0.1) | float) %}  ## in degrees C per minute
+    {% set TIMEOUT = (params.TIMEOUT | default(60) | int) * 60 %} ## minutes to seconds
     {% set CALLBACK  = (params.CALLBACK) %}
     {% set soak_temp = printer[SOAKER].temperature %}
+    {% set MINTEMP = (params.MINTEMP | default(45) | float) %} ## minimum temperature to end heat soak
     
     SET_GCODE_VARIABLE MACRO=HEAT_SOAK VARIABLE=heater_sensor       VALUE="'{ HEATER }'"
     SET_GCODE_VARIABLE MACRO=HEAT_SOAK VARIABLE=target_temp         VALUE={ TARGET }
@@ -43,6 +47,8 @@ gcode:
     SET_GCODE_VARIABLE MACRO=HEAT_SOAK VARIABLE=last_temp           VALUE={ soak_temp }
     SET_GCODE_VARIABLE MACRO=HEAT_SOAK VARIABLE=stage               VALUE="'heating'"
     SET_GCODE_VARIABLE MACRO=HEAT_SOAK VARIABLE=total_time_elapsed  VALUE=0
+    SET_GCODE_VARIABLE MACRO=HEAT_SOAK VARIABLE=mintemp             VALUE={ MINTEMP }
+    SET_GCODE_VARIABLE MACRO=HEAT_SOAK VARIABLE=check_interval      VALUE={ check_interval_heating }
 
     SET_HEATER_TEMPERATURE HEATER={ HEATER } TARGET={ TARGET }
     UPDATE_DELAYED_GCODE ID=heat_soaker DURATION={ check_interval }
@@ -83,7 +89,7 @@ gcode:
     SET_GCODE_VARIABLE MACRO=HEAT_SOAK VARIABLE=last_temp VALUE={ soak_temp }
 
     {% if stage == "heating" %}
-        {% if heater_temp < heat_soak.target_temp %}
+        {% if heater_temp < (heat_soak.target_temp - (0.01 * heat_soak.target_temp)) %}
             {action_respond_info("Heating %.1fC / %.1fC" % (heater_temp, heat_soak.target_temp))}
         {% else %}
             {action_respond_info("Heating completed after ~%.1fm, starting heat soak phase." % (total_time_elapsed / 60.0))}
@@ -91,6 +97,7 @@ gcode:
             # reset total time to 0 so soaking time is reported from 0
             {% set total_time_elapsed = 0 %}
             SET_GCODE_VARIABLE MACRO=HEAT_SOAK VARIABLE=total_time_elapsed VALUE={ total_time_elapsed }
+            SET_GCODE_VARIABLE MACRO=HEAT_SOAK VARIABLE=check_interval     VALUE={ heat_soak.check_interval_soaking }
         {% endif %}
     {% endif %}
 
@@ -98,18 +105,30 @@ gcode:
         ## decrement the soak countdown
         {% set soak_time_remaining = [heat_soak.soak_time_remaining - heat_soak.check_interval, 0] | max %}
         SET_GCODE_VARIABLE MACRO=HEAT_SOAK VARIABLE=soak_time_remaining VALUE={ soak_time_remaining }
-
+      
         ## abort soaking if timeout is reached
+        #{ action_respond_info("soak_time_remaining: %.1f igual 0" % soak_time_remaining) }
+        #{ action_respond_info("soak_temp_rate: %.1f" % soak_temp_rate) }
+        #{ action_respond_info("<") }
+        #{ action_respond_info("heat_soak.target_rate: %.1f" % heat_soak.target_rate) }
+        #{ action_respond_info(" E ") }
+        #{ action_respond_info("soak_temp: %.1f" % soak_temp) }
+        #{ action_respond_info(">") }
+        #{ action_respond_info("heat_soak.mintemp: %.1f" % heat_soak.mintemp) }
+        
         {% if soak_time_remaining == 0 %}
             {action_respond_info("Heat soak timed out after ~%.1fm" % (total_time_elapsed / 60.0))}
             {% set stage = "cancel" %}
-        ## log and continue soaking
-        {% elif soak_temp_rate > heat_soak.target_rate %}
-            {action_respond_info("Heat Soaking %.3fC/m / %.2fC/m" % (soak_temp_rate, heat_soak.target_rate))}
         ## end soaking if the target soak_temp_rate is achieved
-        {% else %}
+        {% elif (soak_temp_rate <= heat_soak.target_rate) and (soak_temp >= heat_soak.mintemp)  %}
             {action_respond_info("Heat soak complete after after ~%.1fm at %.1fC" % (total_time_elapsed / 60.0, soak_temp))}
             {% set stage = "done" %}
+        ## log and continue soaking
+        {% else %}
+            {action_respond_info("Heat Soaking %.2f C/m -> %.2f C/m" % (soak_temp_rate, heat_soak.target_rate))}
+            {action_respond_info("Heat Soaking temperature: %.1f C / minimum: %.1f C" % (soak_temp, heat_soak.mintemp))}
+            {action_respond_info("Heat Soaking elapsed time: %.1f m" % (total_time_elapsed / 60.0))}
+
         {% endif %}
 
     {% endif %}
