--- a/macro_level_bed_adv.cfg
+++ b/macro_level_bed_adv.cfg
@@ -47,5 +47,7 @@ gcode:
   {% if printer["gcode_macro LEVEL_BED_ADVANCED"].save_at_end == 1 %}
   {action_respond_info("Saving was requested - saving and restarting now.")}
   SAVE_VARIABLE VARIABLE=level_age VALUE=1
-  SAVE_CONFIG
+  # not standard Save_config command.
+  # https://klipper.discourse.group/t/fr-save-config-without-restarting-the-machine/2699/9?u=sinisterrj
+  SAVE_CONFIG NORESTART=1
   {% endif %}
