--- a/macro_print_start.cfg
+++ b/macro_print_start.cfg
@@ -11,12 +11,13 @@ gcode:
     {% set force_bedmesh = params.FORCE_BEDMESH|default(0)|int %}
     {% set PA = params.PA|default(0.05)|float %}
     {% set HEATSOAK = params.HEATSOAK|default(100.0)|float %}
+    {% set PRINTHEAD = params.PRINTHEAD|default(200.0)|float %}
     {% set CALLBACK = params.CALLBACK %}
     
     
     SET_GCODE_VARIABLE MACRO=PRINT_START VARIABLE=callback VALUE="'{CALLBACK}'"
     {% set CONTINUE -%}
-        PRINT_START_CONTINUE CORNER_VELOCITY={speed_min} MAX_VELOCITY={speed_max} ACCEL={speed_accel} DEACCEL={speed_deaccel} FORCE_HOME_XY={force_home_xy} FORCE_QGL={force_qgl} FORCE_BEDMESH={force_bedmesh} PA={PA} HEATSOAK={HEATSOAK}
+        PRINT_START_CONTINUE CORNER_VELOCITY={speed_min} MAX_VELOCITY={speed_max} ACCEL={speed_accel} DEACCEL={speed_deaccel} FORCE_HOME_XY={force_home_xy} FORCE_QGL={force_qgl} FORCE_BEDMESH={force_bedmesh} PA={PA} HEATSOAK={HEATSOAK} PRINTHEAD={PRINTHEAD}
     {%- endset %}
     
     
@@ -25,17 +26,19 @@ gcode:
     
     M117 Preparing to print
     {action_respond_info("**************** Preparing to print ****************")}
+    M104 S{PRINTHEAD - (0.2 * PRINTHEAD)}
     
     SET_VELOCITY_LIMIT VELOCITY={speed_max} ACCEL={speed_accel} ACCEL_TO_DECEL={speed_deaccel} SQUARE_CORNER_VELOCITY={speed_min}
     CLEAR_PAUSE    ; Limpa o estado de pause caso a ultima impressao tenha sido finalizada depois de um pause e antes de um resume.
     
     SET_STATUS STATUS="heat_soak"
     
-    {% if HEATSOAK > printer.heater_bed.temperature %}
-        HEAT_SOAK HEATER='heater_bed' TARGET={HEATSOAK} SOAKER='temperature_sensor enclosure_temp' RATE=0.75 TIMEOUT=60 CALLBACK='{CONTINUE}'
+    {% set min_temp = (HEATSOAK/2)-6 | float %}
+    {% if min_temp >= printer['temperature_sensor enclosure_temp'].temperature %}
+        HEAT_SOAK HEATER='heater_bed' TARGET={HEATSOAK} SOAKER='temperature_sensor enclosure_temp' RATE=0.1 TIMEOUT=60 MINTEMP={min_temp} CALLBACK='{CONTINUE}'
     {% else %}
         RESPOND TYPE=echo MSG="Skiping heatsoak."
-        PRINT_START_CONTINUE CORNER_VELOCITY={speed_min} MAX_VELOCITY={speed_max} ACCEL={speed_accel} DEACCEL={speed_deaccel} FORCE_HOME_XY={force_home_xy} FORCE_QGL={force_qgl} FORCE_BEDMESH={force_bedmesh} PA={PA} HEATSOAK={HEATSOAK}
+        PRINT_START_CONTINUE CORNER_VELOCITY={speed_min} MAX_VELOCITY={speed_max} ACCEL={speed_accel} DEACCEL={speed_deaccel} FORCE_HOME_XY={force_home_xy} FORCE_QGL={force_qgl} FORCE_BEDMESH={force_bedmesh} PA={PA} HEATSOAK={HEATSOAK} PRINTHEAD={PRINTHEAD}
     {% endif %}
     
 
@@ -50,6 +53,7 @@ gcode:
     {% set force_bedmesh = params.FORCE_BEDMESH|default(0)|int %}
     {% set PA = params.PA|default(0.05)|float %}
     {% set HEATSOAK = params.HEATSOAK|default(100.0)|float %}
+    {% set PRINTHEAD = params.PRINTHEAD|default(200.0)|float %}
 
     {% set bkp_speed_accel = printer.toolhead.max_accel|int %}
     {% set bkp_speed_deaccel = printer.toolhead.max_accel_to_decel|int %}
@@ -106,4 +110,5 @@ gcode:
 
     SET_LED LED=case RED=0 GREEN=0 BLUE=0 WHITE=1
     SET_PRESSURE_ADVANCE ADVANCE={PA}
+    M109 S{PRINTHEAD}
     RESTORE_GCODE_STATE NAME=printer_init
