--- a/printer.cfg
+++ b/printer.cfg
@@ -96,6 +96,16 @@ gcode:
 [gcode_macro HOMED]
 gcode:
     { action_respond_info("Axes homed: " ~ printer.toolhead.homed_axes)}
+    
+[gcode_macro SIREN]
+gcode:
+    M300 S850 P400
+    M300 S1020 P300
+    M300 S850 P400
+    M300 S1020 P300
+    M300 S850 P400
+    M300 S1020 P300
+    M300 S850 P400
 
 #*# <---------------------- SAVE_CONFIG ---------------------->
 #*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
@@ -118,11 +128,11 @@ gcode:
 #*# [bed_mesh default]
 #*# version = 1
 #*# points =
-#*# 	  0.041250, 0.041250, 0.036250, 0.032500, 0.041250
-#*# 	  0.002500, 0.002500, -0.002500, -0.001250, 0.028750
-#*# 	  0.000000, 0.001250, 0.000000, 0.000000, 0.021250
-#*# 	  -0.007500, -0.007500, -0.015000, -0.013750, 0.015000
-#*# 	  0.038750, 0.035000, 0.021250, 0.018750, 0.023750
+#*# 	0.050000, 0.046250, 0.040000, 0.032500, 0.042500
+#*# 	0.006250, 0.006250, 0.001250, -0.001250, 0.027500
+#*# 	-0.002500, -0.000000, 0.000000, -0.001250, 0.020000
+#*# 	-0.005000, -0.002500, -0.011250, -0.008750, 0.020000
+#*# 	0.055000, 0.057500, 0.043750, 0.040000, 0.042500
 #*# tension = 0.2
 #*# min_x = 40.0
 #*# algo = bicubic
