--- a/Config&Macros/config_enclosure.cfg
+++ b/Config&Macros/config_enclosure.cfg
@@ -1,20 +1,24 @@
 #######################################. # RC Seção toda nova
 #### Enclosure Temp Sensor Section ####
 #######################################
-[thermistor chamber_temp]
-temperature1: 25
-resistance1: 10000
-beta: 3950
+#[thermistor chamber_temp]
+#temperature1: 25
+#resistance1: 10000
+#beta: 3950
+
 
 [temperature_sensor enclosure_temp]
-sensor_type: chamber_temp
+#sensor_type: chamber_temp
+sensor_type: Generic 3950
 sensor_pin: PF5
-min_temp: 0
-max_temp: 100
+min_temp: -100
+max_temp: 200
 gcode_id: C
 
-#[temperature_sensor electronics_temp]
+[temperature_sensor electronics_temp]
 #sensor_type: chamber_temp
-#sensor_pin: PF6
-#min_temp: 0
-#max_temp: 100
+sensor_type: Generic 3950
+sensor_pin: PF6
+min_temp: -100
+max_temp: 200
+gcode_id: E
