--- a/Config&Macros/config_fans.cfg
+++ b/Config&Macros/config_fans.cfg
@@ -5,11 +5,13 @@
 [fan]
 ##  Print Cooling Fan - FAN0
 pin: PA8
-kick_start_time: 0.5
+kick_start_time: 1.0
 ##  Depending on your fan, you may need to increase this value
 ##  if your fan will not start. Can change cycle_time (increase)
 ##  if your fan is not able to slow down effectively
-off_below: 0.25
+cycle_time: 0.010
+hardware_pwm: False
+off_below: 0.02
 
 [heater_fan hotend_fan]
 ##  Hotend Fan - FAN1
@@ -26,6 +28,12 @@ pins: PD12, PD13
 
 [controller_fan controller_fan]
 ##  Controller fan - FAN2
-pin: multi_pin:fan_pin  #RC modificado para incluir as duas Fans
+pin: multi_pin: fan_pin  #RC modificado para incluir as duas Fans
 kick_start_time: 0.5
 heater: heater_bed
+
+[fan_generic chamber_fan]
+pin: PD14
+max_power: 1.0
+kick_start_time: 0.5
+off_below: 0.10
