--- a/Config&Macros/config_probe.cfg
+++ b/Config&Macros/config_probe.cfg
@@ -15,9 +15,9 @@ timeout: 1800
 #z_hop:10
 
 [z_calibration]     #RC Incluido - Klicky + Zoffset
-nozzle_xy_position: 203,300
+nozzle_xy_position: 204,299.5
 #   A X, Y coordinate (e.g. 100,100) of the nozzle, clicking on the Z endstop.
-switch_xy_position: 196,281
+switch_xy_position: 200,276
 #   A X, Y coordinate (e.g. 100,100) of the probe's switch body, clicking on
 #   the Z endstop.
 bed_xy_position: 150,150 #default from relative_reference_index of bed_mesh
@@ -26,35 +26,35 @@ bed_xy_position: 150,150 #default from relative_reference_index of bed_mesh
 #   probe's X and Y offsets. The default is the relative_reference_index
 #   of the configured bed_mesh, if configured. It's possible to change the relative
 #   reference index at runtime or use the GCode argument BED_POSITION of CALIBRATE_Z.
-switch_offset: 0.442
+switch_offset: 0.54 #0.430 #0.442
 #   The trigger point offset of the used mag-probe switch.
 #   Larger values will position the nozzle closer to the bed.
 #   This needs to be find out manually. More on this later
 #   in this section..
-max_deviation: 1
+max_deviation: 5
 #   The maximum allowed deviation of the calculated offset.
 #   If the offset exceeds this value, it will stop!
 #   The default is 1.0 mm.
 #samples: 5 #default from "probe:samples" section
 #   The number of times to probe each point. The probed z-values
 #   will be averaged. The default is from the probe's configuration.
-#samples_tolerance: 0.0051 #default from "probe:samples_tolerance" section
+samples_tolerance: 0.0051 #default from "probe:samples_tolerance" section
 #   The maximum Z distance (in mm) that a sample may differ from other
 #   samples. The default is from the probe's configuration.
-#samples_tolerance_retries: 10 #default from "probe:samples_tolerance_retries" section
+samples_tolerance_retries: 10 #default from "probe:samples_tolerance_retries" section
 #   The number of times to retry if a sample is found that exceeds
 #   samples_tolerance. The default is from the probe's configuration.
 #samples_result: median #default from "probe:samples_result" section
 #   The calculation method when sampling more than once - either
 #   "median" or "average". The default is from the probe's configuration.
-clearance: 5
+clearance: 10
 #   The distance in mm to move up before moving to the next
 #   position. The default is two times the z_offset from the probe's
 #   configuration.
 #position_min: -5 #default from "stepper_z:position_min" section.
 #   Minimum valid distance (in mm) used for probing move. The
 #   default is from the Z rail configuration.
-speed: 50
+speed: 300
 #   The moving speed in X and Y. The default is 50 mm/s.
 #lift_speed: default from "probe:lift_speed" section
 #   Speed (in mm/s) of the Z axis when lifting the probe between
@@ -63,10 +63,10 @@ speed: 50
 #probing_speed: 8 #default from "stepper_z:homing_speed" section.
 #   The fast probing speed (in mm/s) used, when probing_first_fast
 #   is activated. The default is from the Z rail configuration.
-#probing_second_speed: 3 #default from "stepper_z:second_homing_speed" section.
+probing_second_speed: 2 #default from "stepper_z:second_homing_speed" section.
 #   The slower speed (in mm/s) for probing the recorded samples.
 #   The default is second_homing_speed of the Z rail configuration.
-# probing_retract_dist: 3 #default from "stepper_z:homing_retract_dist" section. #RC Usando o do probe
+probing_retract_dist: 0.8 #default from "stepper_z:homing_retract_dist" section. #RC Usando o do probe
 #   Distance to retract (in mm) before probing the next sample.
 #   The default is homing_retract_dist from the Z rail configuration.
 probing_first_fast: true               # false RC
@@ -101,20 +101,6 @@ end_gcode: DOCK_PROBE
 ##  to respective belt positions
 
 #--------------------------------------------------------------------
-##  Gantry Corners for 250mm Build
-##  Uncomment for 250mm build
-#gantry_corners:
-#   -60,-10
-#   310, 320
-##  Probe points
-#points:
-#   50,25
-#   50,175
-#   200,175
-#   200,25
-    
-##  Gantry Corners for 300mm Build
-##  Uncomment for 300mm build
 gantry_corners:          ##RC Descomentado
    -60,-10               #RC Descomentado
    360,370               #RC Descomentado
@@ -125,20 +111,8 @@ points:                  ##RC Descomentado
    250,225               #RC Descomentado
    250,25                #RC Descomentado
 
-##  Gantry Corners for 350mm Build
-##  Uncomment for 350mm build
-#gantry_corners:
-#   -60,-10
-#   410,420
-##  Probe points
-#points:
-#   50,25
-#   50,275
-#   300,275
-#   300,25
-
 #--------------------------------------------------------------------
-speed: 100
+speed: 300
 horizontal_move_z: 10
 retries: 5
 retry_tolerance: 0.0076 #0.0051 #0.0075 #RC Sugestão do Diem
@@ -153,22 +127,13 @@ max_adjust: 10
 [bed_mesh]
 speed: 300
 horizontal_move_z: 10
-##--------------------------------------------------------------------
-##	Uncomment below for 250mm build
-#mesh_min: 40, 40
-#mesh_max: 210,210
 
-##	Uncomment for 300mm build
 mesh_min: 40, 40
 mesh_max: 260,260
 
-##	Uncomment for 350mm build
-#mesh_min: 40, 40
-#mesh_max: 310,310
-##--------------------------------------------------------------------
 fade_start: 0.6
 fade_end: 10.0
-probe_count: 5,5
+probe_count: 9,9
 algorithm: bicubic
 relative_reference_index: 12
 
