--- a/Config&Macros/macro_filament_change.cfg
+++ b/Config&Macros/macro_filament_change.cfg
@@ -28,11 +28,13 @@ gcode:
     SET_GCODE_VARIABLE MACRO=M600 VARIABLE=global_z VALUE={printer.toolhead.position.z}
   
     SAVE_GCODE_STATE NAME=M600_state
+    
+    {% set playSiren = 0 %}
     {% if (printer.idle_timeout.state == "Printing") %}
         PAUSE
         SET_IDLE_TIMEOUT TIMEOUT=3600
         RESPOND TYPE=command MSG=action:paused
-        SIREN
+        {% set playSiren = 1 %}
     {% endif %}
     G91
     G1 E-{E} F2700
@@ -49,7 +51,11 @@ gcode:
     G1 Z{Z}
     G91
     G1 E-{L} F1000
+    {% if playSiren == 1 %}
+        SIREN
+    {% endif %}
     RESTORE_GCODE_STATE NAME=M600_state    
+
 
 [gcode_macro RESUME_MACRO]
 gcode:
@@ -57,7 +63,7 @@ gcode:
     PURGE_FILLAMENT
     SET_IDLE_TIMEOUT TIMEOUT=600
     G91
-    G1 E-0.8 F2700
+    G1 E-5 F2700
     G90
     {% set max_z = printer.toolhead.axis_maximum.z|float %}
     
@@ -70,7 +76,7 @@ gcode:
     G1 X{printer["gcode_macro M600"].global_x} Y{printer["gcode_macro M600"].global_y}
     G1 Z{printer["gcode_macro M600"].global_z}
     G91
-    G1 E0.8 F2700
+    G1 E5 F2700
     G90
     RESUME
     RESPOND TYPE=command MSG=action:resumed
