--- a/Config&Macros/macro_heatsoak.cfg
+++ b/Config&Macros/macro_heatsoak.cfg
@@ -49,6 +49,8 @@ gcode:
     SET_GCODE_VARIABLE MACRO=HEAT_SOAK VARIABLE=total_time_elapsed  VALUE=0
     SET_GCODE_VARIABLE MACRO=HEAT_SOAK VARIABLE=mintemp             VALUE={ MINTEMP }
     SET_GCODE_VARIABLE MACRO=HEAT_SOAK VARIABLE=check_interval      VALUE={ check_interval_heating }
+    
+    SET_FAN_SPEED FAN=chamber_fan SPEED=1
 
     SET_HEATER_TEMPERATURE HEATER={ HEATER } TARGET={ TARGET }
     UPDATE_DELAYED_GCODE ID=heat_soaker DURATION={ check_interval }
@@ -144,6 +146,8 @@ gcode:
         SET_GCODE_VARIABLE MACRO=HEAT_SOAK VARIABLE=heater_sensor       VALUE=None
         SET_GCODE_VARIABLE MACRO=HEAT_SOAK VARIABLE=soaker_sensor       VALUE=None
         SET_GCODE_VARIABLE MACRO=HEAT_SOAK VARIABLE=target_rate         VALUE=10
+        
+        SET_FAN_SPEED FAN=chamber_fan SPEED=0
         
         {% if stage == "cancel" %}
             {% set stage = "done" %}
