--- a/Config&Macros/macro_print_end.cfg
+++ b/Config&Macros/macro_print_end.cfg
@@ -24,7 +24,6 @@ gcode:
     M107                                     ; turn off fan
     
     #BED_MESH_CLEAR
-    SAVE_IF_SET     ; SAVE_CONFIG if a mesh was probed in START_PRINT
-    SET_LED LED=case RED=0 GREEN=1 BLUE=0 WHITE=0
-    
+    #SAVE_IF_SET     ; SAVE_CONFIG if a mesh was probed in START_PRINT
+    SET_STATUS STATUS="finished" 
     RESTORE_GCODE_STATE NAME=STATE_PRINT_END
