--- a/Config&Macros/macro_set_status.cfg
+++ b/Config&Macros/macro_set_status.cfg
@@ -3,26 +3,43 @@ gcode:
     {% set STATUS = params.STATUS | string %}
 
     {% if STATUS == "heat_soak" %}
-	    SET_LED LED=case RED=1 GREEN=0 BLUE=1 WHITE=0
+	    wled_on preset=2
 	    {action_respond_info("************* Step 1: Heat Soak. *************")}
 	    M117 1: Heat Soak
+	    status_heating
     {% elif STATUS == "home" %}
-	    SET_LED LED=case RED=1 GREEN=1 BLUE=0 WHITE=0
+	    wled_on preset=1
 	    {action_respond_info("Homing...")}
 	    M117 Homming
+	    status_homing
     {% elif STATUS == "wipe" %}
+	    wled_on preset=1
 	    M117 Nozzle wipe
-    	{action_respond_info("Nozzle wipe.")}
+	    status_cleaning
+    	    {action_respond_info("Nozzle wipe.")}
     {% elif STATUS == "qgl" %}
-	    SET_LED LED=case RED=1 GREEN=0 BLUE=0 WHITE=0
+	    wled_on preset=4
 	    M117 Gantry Leveling
+	    status_leveling
 	    {action_respond_info("************* Step 2: Quad gantry level. *************")}
     {% elif STATUS == "zoffset" %}
+    	    wled_on preset=4
 	    M117 Z offset calibration
-        {action_respond_info("************* Step 3: Calibrate Z offset. *************")}
+	    status_calibrating_z
+            {action_respond_info("************* Step 3: Calibrate Z offset. *************")}
     {% elif STATUS == "bedlevel" %}
-    	SET_LED LED=case RED=1 GREEN=0.8 BLUE=0 WHITE=0
+    	    wled_on preset=4
    	    M117 Bed leveling...
-    	{action_respond_info("************* Step 4: Bed Leveling. *************")}
+   	    status_meshing
+    	    {action_respond_info("************* Step 4: Bed Leveling. *************")}
+    {% elif STATUS == "finished" %}
+    	    wled_on preset=3
+	    status_ready
+   	    M117 Finished
+    {% elif STATUS == "printing" %}
+    	    wled_on preset=1
+   	    M117 Printing...
+	    status_printing
+	    {action_respond_info("************* PRINTING *************")}
     {% endif %}
       
