--- a/Config&Macros/macro_wipe_nozzle.cfg
+++ b/Config&Macros/macro_wipe_nozzle.cfg
@@ -13,3 +13,15 @@ gcode:
     G1 X55 Y298.5 F2000         ; slow wipe
     G1 X95 Y300 F2000           ; slow wipe
     G1 Z10                      ; raise extruder
+    
+#   Wipe the nozzle
+[gcode_macro FAST_NOZZLE_WIPE]
+gcode:
+    M117 Wiping Nozzle MACRO
+    G1 X95 Y300 F4000           ; move above wiper pad
+    G1 Z2.5                     ; push nozzle into wiper
+    G1 X55 Y300 F2000           ; slow wipe
+    G1 X95 Y298.5 F2000         ; move 1.5mm
+    G1 X55 Y300 F2000
+    G1 Z10                      ; raise extruder
+    G1 X150 Y150 F4000
