--- a/Config&Macros/config_bed.cfg
+++ b/Config&Macros/config_bed.cfg
@@ -8,7 +8,7 @@
 heater_pin: PA3
 ##  Validate the following thermistor type to make sure it is correct
 ##  See https://www.klipper3d.org/Config_Reference.html#common-thermistors for additional options
-sensor_type: Generic 3950       # RC decomentado
+sensor_type: EPCOS 100K B57560G104F #Generic 3950       # RC decomentado
 sensor_pin: PF3
 ##  Adjust Max Power so your heater doesn't warp your bed. Rule of thumb is 0.4 watts / cm^2 .
 max_power: 0.6
