--- a/Config&Macros/config_extruder.cfg
+++ b/Config&Macros/config_extruder.cfg
@@ -13,11 +13,11 @@ enable_pin: !PD4
 ##  If you ask for 100mm of filament, but in reality it is 98mm:
 ##  rotation_distance = <previous_rotation_distance> * <actual_extrude_distance> / 100
 ##  22.6789511 is a good starting point
-rotation_distance: 21.9229860 #22.3387668 #RC modificado Esteps caliracao #22.6789511   #Bondtech 5mm Drive Gears
+rotation_distance: 22.20064 #22.3387668 #RC modificado Esteps calibracao #22.6789511   #Bondtech 5mm Drive Gears
 ##  Update Gear Ratio depending on your Extruder Type
 ##  Use 50:17 for Afterburner/Clockwork (BMG Gear Ratio)
 ##  Use 80:20 for M4, M3.1
-gear_ratio: 50:17               #BMG Gear Ratio
+gear_ratio: 50:10               #BMG Gear Ratio
 microsteps: 32
 full_steps_per_rotation: 200    #200 for 1.8 degree, 400 for 0.9 degree
 nozzle_diameter: 0.400
@@ -25,7 +25,7 @@ filament_diameter: 1.75
 heater_pin: PA2
 ##  Validate the following thermistor type to make sure it is correct
 ##  See https://www.klipper3d.org/Config_Reference.html#common-thermistors for additional options
-sensor_type: Generic 3950        #RC Modificado de "ATC Semitec 104GT-2"
+sensor_type: EPCOS 100K B57560G104F #Generic 3950        #RC Modificado de "ATC Semitec 104GT-2"
 sensor_pin: PF4
 min_temp: 10
 max_temp: 270
@@ -37,7 +37,7 @@ max_extrude_only_distance: 110.0
 #pid_ki = 1.304
 #pid_kd = 131.721
 ##  Try to keep pressure_advance below 1.0
-pressure_advance: 0.05
+pressure_advance: 0.03
 ##  Default is 0.040, leave stock
 #pressure_advance_smooth_time: 0.040
 
