--- a/Config&Macros/config_leds.cfg
+++ b/Config&Macros/config_leds.cfg
@@ -2,12 +2,40 @@
 #   LED Control
 #####################################################################
 
-[neopixel case]
+# Macros for setting the status leds on the Voron StealthBurner toolhead (or for any neopixel-type leds).
+#
+# You will need to configure a neopixel (or other addressable led, such as dotstar). See
+# https://www.klipper3d.org/Config_Reference.html#neopixel for configuration details.
+#
+# CONFIGURATION
+#
+# Example neopixel configuration:
+# [neopixel sb_leds]
+# pin: <your pin>
+# #   The pin connected to the neopixel. This parameter must be
+# #   provided.
+# chain_count: 3
+# #   The number of Neopixel chips that are "daisy chained" to the
+# #   provided pin. The default is 1 (which indicates only a single
+# #   Neopixel is connected to the pin).
+# color_order: GRBW
+# #   Set the pixel order required by the LED hardware. Options are GRB,
+# #   RGB, GRBW, or RGBW. The default is GRB.
+# initial_RED: 0.0
+# initial_GREEN: 0.0
+# initial_BLUE: 0.0
+# initial_WHITE: 0.0
+# #   Sets the initial LED color of the Neopixel. Each value should be
+# #   between 0.0 and 1.0. The WHITE option is only available on RGBW
+# #   LEDs. The default for each color is 0.#
+#
+[neopixel sb_leds]
 pin:                     PB0
-chain_count:             38
+chain_count:             3
 
-initial_RED:  0 # 0.1                 #RC Descomentado
-initial_GREEN: 0 # 0.5               #RC Descomentado
-initial_BLUE: 0 # 0.0                #RC Descomentado
+initial_RED:  0 # 0.1
+initial_GREEN: 0 # 0.5
+initial_BLUE: 0 # 0.0
 initial_WHITE: 1
-color_order: GRBW                 #RC Descomentado
+color_order: GRBW                
+
