--- a/Config&Macros/klipper/config/klicky-variables.cfg
+++ b/Config&Macros/klipper/config/klicky-variables.cfg
@@ -20,7 +20,7 @@ variable_z_drop_speed:          20    # how fast the z will lower when moving to
 
 variable_safe_z:         	    25    # Minimum Z for attach/dock and homing functions
 # if true it will move the bed away from the nozzle when Z is not homed
-variable_enable_z_hop:        True    # set this to false for beds that fall significantly under gravity (almost to Z max)
+variable_enable_z_hop:        False    # set this to false for beds that fall significantly under gravity (almost to Z max)
 
 variable_max_bed_y:            300    # maximum Bed size avoids doing a probe_accuracy outside the bed
 variable_max_bed_x:            297    # maximum Bed size avoids doing a probe_accuracy outside the bed
@@ -28,13 +28,13 @@ variable_max_bed_x:            297    # maximum Bed size avoids doing a probe_ac
 # if a separate Z endstop switch is in
 # use, specify the coordinates of the switch here (Voron).
 # Set to 0 to have the probe move to center of bed
-variable_z_endstop_x:          202
-variable_z_endstop_y:          301
+variable_z_endstop_x:          203.75
+variable_z_endstop_y:          300.5
 
 #Check the documentation on klipper Dock/Undock configuration, these are dummy values
 #dock location 
-variable_docklocation_x:       136    # X Dock position
-variable_docklocation_y:       299    # Y Dock position
+variable_docklocation_x:       140    # X Dock position
+variable_docklocation_y:       295    # Y Dock position
 variable_docklocation_z:      -128    # Z dock position (-128 for a gantry/frame mount)
 
 #Dock move, final toolhead movement to release the probe on the dock
