--- a/Config&Macros/macro_level_bed_adv.cfg
+++ b/Config&Macros/macro_level_bed_adv.cfg
@@ -9,45 +9,25 @@ variable_save_at_end: 0
 gcode:
   {% set max_age = params.MAX_AGE|default(10)|int %}
   {% set force_level = params.FORCE|default(0)|int %}
-  {% set save = params.SAVE|default(0)|int %}
-
-  ; load level_age from stored variables
-  {% set svv = printer.save_variables.variables %}
-  {% if "level_age" not in svv %} ; first run
-    SAVE_VARIABLE VARIABLE=level_age VALUE={max_age}
-    {% set level_age = 1 %}
+ 
+  {% if (printer["gcode_macro VARIABLES"].level_age == 0) or (printer["gcode_macro VARIABLES"].level_age >= max_age|int) or (force_level == 1)%} 
+    SET_GCODE_VARIABLE MACRO=VARIABLES VARIABLE=level_age VALUE=1
+    {% set force_level = 1 %}
   {% else %} ; load level_age and increment
-    {% set level_age = svv.level_age %}
-    SAVE_VARIABLE VARIABLE=level_age VALUE={level_age|int + 1}
-  {% endif %}
-  {action_respond_info("Bed mesh age is " + level_age|string) + "."} 
+    SET_GCODE_VARIABLE MACRO=VARIABLES VARIABLE=level_age VALUE={ printer["gcode_macro VARIABLES"].level_age + 1 }
+  {% endif %} 
+  {action_respond_info("Bed mesh age is " + printer["gcode_macro VARIABLES"].level_age|string) + "."} 
+  {action_respond_info("Force Bed mesh is " + force_level|string) + "."} 
 
   ; Level eventually
-  {% if force_level or (level_age >= max_age|int) %}
-    {action_respond_info("Bed mesh exceeded max age. Leveling...")} 
+  {% if force_level %}
+    {action_respond_info("Bed mesh leveling...")} 
 
     M106 S255  #Start fan  
     BED_MESH_CALIBRATE
     M106 S0  #Stop fan
-    {% if save %}
-      SAVE_VARIABLE VARIABLE=level_age VALUE=1 ; reset counter
-      SAVE_CONFIG
-    {% else %}
-      SET_GCODE_VARIABLE MACRO=LEVEL_BED_ADVANCED VARIABLE=save_at_end VALUE=1
-    {% endif %}
   {% else %}
     {action_respond_info("Loading old bed mesh.")} 
     RESPOND MSG="Bed level: loading default profile."
     BED_MESH_PROFILE LOAD=default
   {% endif %} 
-
-# runs SAVE_CONFIG if the g-code variable was set in start gcode
-[gcode_macro SAVE_IF_SET]
-gcode:
-  {% if printer["gcode_macro LEVEL_BED_ADVANCED"].save_at_end == 1 %}
-  {action_respond_info("Saving was requested - saving and restarting now.")}
-  SAVE_VARIABLE VARIABLE=level_age VALUE=1
-  # not standard Save_config command.
-  # https://klipper.discourse.group/t/fr-save-config-without-restarting-the-machine/2699/9?u=sinisterrj
-  SAVE_CONFIG NORESTART=1
-  {% endif %}
