--- a/Config&Macros/printer.cfg
+++ b/Config&Macros/printer.cfg
@@ -1,4 +1,20 @@
 #####################################################################
+#   Plugins/Scripts instalados (referências)
+#####################################################################
+#
+# Self Calibrating Z Offset
+# https://github.com/protoloft/klipper_z_calibration
+#
+# Input Shaper Workflow
+# https://github.com/Frix-x/klipper-voron-V2/blob/main/doc/features/is_workflow.md
+#
+# Automated Probe Accuracy test
+# https://github.com/sporkus/probe_accuracy_tests
+#
+# Probe accuracy testing
+# https://github.com/KiloQubit/probe_accuracy
+#
+#####################################################################
 #   Printer Configuration
 #####################################################################
 
@@ -26,8 +42,15 @@
 
 [include config_filament_sensor.cfg]
 
+#####################################################################
+#   Other Printer Configuration
+#####################################################################
+
 [force_move]
 enable_force_move: True
+
+[exclude_object]
+# Needed for adaptative bed mesh
 
 #####################################################################
 #  File location of stored variables
@@ -39,12 +62,15 @@ filename: ~/variables.cfg
 #   variables to disk e.g. ~/variables.cfg
 
 #####################################################################
-#   Macros
+#  Moonraker Requirements
 #####################################################################
 
-[include klipper/config/klicky-probe.cfg]      #RC Adicionado Klicky
+[virtual_sdcard]
+path: ~/printer_data/gcodes
 
-[include klipper/config/nozzle_scrub.cfg]      #RC Adicionado Purge bucket
+#####################################################################
+#   Macros
+#####################################################################
 
 [include macro_g32.cfg]
  
@@ -52,24 +78,62 @@ filename: ~/variables.cfg
 
 [include macro_print_start.cfg]
 
+[include macro_M572.cfg]
+
 [include macro_print_end.cfg]
 
 [include macro_wipe_nozzle.cfg]
-
-[include macro_level_bed_adv.cfg]
 
 [include macro_filament_change.cfg]
 
 [include macro_beeper.cfg]
 
-[include macro_heatsoak.cfg]
-
 [include macro_avoid_klicky.cfg]
 
 [include macro_set_status.cfg]
+
+[include macro_wled.cfg]
+
+[include macro_sbleds.cfg]
+
+#####################################################################
+#   Macros especiais de terceiros
+#####################################################################
+
+# Adaptative Bed Mesh
+# https://github.com/Frix-x/klipper-voron-V2/blob/main/macros/calibration/adaptive_bed_mesh.cfg
+[include macro_adaptive_bed_mesh.cfg]
+
+# Automatizao dos testes de vibracao
+# https://github.com/Frix-x/klipper-voron-V2/blob/main/macros/calibration/vibr_calibrate_01.cfg
+[include macro_vibr_calibrate_01.cfg]
+[include printer_data/config/scripts/shell_commands.cfg] 
+
+# Klicky
+# https://github.com/jlas1/Klicky-Probe
+[include klipper/config/klicky-probe.cfg]
+
+# Purge bucket
+# https://github.com/Hartk-PrinterConfigs/DoomConfig/blob/master/purge.cfg
+[include macro_nozzle_scrub.cfg]
+
+# Test Probe accuracy
+# https://github.com/KiloQubit/probe_accuracy
+[include macro_test_probe_accuracy.cfg]
+
+# Cancellable Heat soak
+# https://github.com/garethky/klipper-voron2.4-config/blob/mainline/klipper_config/heatsoak.readme.md
+[include macro_heatsoak.cfg]
+
+# Advanced Bed Mesh (Nao usada mais)
+#[include macro_level_bed_adv.cfg]
+
+#####################################################################
+#   Macros Simples
+#####################################################################
     
 [gcode_macro VARIABLES]
-variable_hot_start: 0
+variable_level_age: 0
 gcode:
     M118 Stored variable as {printer["gcode_macro VARIABLES"].false}
      
@@ -93,6 +157,18 @@ gcode:
     G90
     G0 X{ printer.toolhead.axis_maximum.x/2 } Y{ printer.toolhead.axis_maximum.y/2 } Z{ printer.toolhead.axis_maximum.z/2 } F7200
 
+[gcode_macro BELT_CENTER]
+gcode:
+    G1 X148.5 Y108 Z10 F4000
+
+[gcode_macro FRONT]
+gcode:
+    {% if ("xyz" not in printer.toolhead.homed_axes) %}
+      G28
+    {% endif %}
+    G90
+    G0 X{ printer.toolhead.axis_maximum.x*2/3 } Y0 Z80 F7200
+
 [gcode_macro HOMED]
 gcode:
     { action_respond_info("Axes homed: " ~ printer.toolhead.homed_axes)}
@@ -106,6 +182,29 @@ gcode:
     M300 S850 P400
     M300 S1020 P300
     M300 S850 P400
+
+#####################################################################
+#   Playground
+#####################################################################
+
+[gcode_macro TESTEMS]
+gcode:
+    RESPOND MSG="$MS clearall"
+    RESPOND MSG="$MS create macroid=1 label=\"Print Start\""
+    RESPOND MSG="$MS addstep macroid=1 step=1 label=\"Heat Soak\""
+    RESPOND MSG="$MS addstep macroid=1 step=2 label=\"Home\""
+    RESPOND MSG="$MS addstep macroid=1 step=3 label=\"Wipe\""
+    RESPOND MSG="$MS addstep macroid=1 step=4 label=\"QGL\""
+
+[gcode_macro TESTEMS2]
+gcode:    
+    M117 $MS clearall
+    M117 $MS create macroid=1 label="Print Start"
+    M117 $MS addstep macroid=1 step=5 label="Home Z"
+    M117 $MS addstep macroid=1 step=6 label="Wipe"
+    M117 $MS addstep macroid=1 step=7 label="Z offset cal."
+    M117 $MS addstep macroid=1 step=8 label="Bed level"
+    M117 $MS addstep macroid=1 step=9 label="Home Z"
 
 #*# <---------------------- SAVE_CONFIG ---------------------->
 #*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
@@ -123,16 +222,16 @@ gcode:
 #*# pid_kd = 320.849
 #*#
 #*# [stepper_z]
-#*# position_endstop = -0.846
+#*# position_endstop = 0.856
 #*#
 #*# [bed_mesh default]
 #*# version = 1
 #*# points =
-#*# 	0.050000, 0.046250, 0.040000, 0.032500, 0.042500
-#*# 	0.006250, 0.006250, 0.001250, -0.001250, 0.027500
-#*# 	-0.002500, -0.000000, 0.000000, -0.001250, 0.020000
-#*# 	-0.005000, -0.002500, -0.011250, -0.008750, 0.020000
-#*# 	0.055000, 0.057500, 0.043750, 0.040000, 0.042500
+#*# 	  0.070000, 0.055000, 0.041250, 0.038750, 0.070000
+#*# 	  0.028750, 0.018750, 0.005000, 0.010000, 0.047500
+#*# 	  0.025000, 0.017500, 0.000000, 0.011250, 0.043750
+#*# 	  0.033750, 0.025000, 0.011250, 0.016250, 0.050000
+#*# 	  0.088750, 0.071250, 0.058750, 0.060000, 0.083750
 #*# tension = 0.2
 #*# min_x = 40.0
 #*# algo = bicubic
